deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yas-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: yas.local  # Tên miền ảo để bạn test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yas-storefront-service # Tên service frontend của bạn
            port:
              number: 8080
  - host: admin.yas.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yas-back-office-service
            port:
              number: 8080
  - host: auth.yas.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
